<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="@color/backGroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meteoroloska_stanica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="24dp"
                android:text="@string/meteoroloskaStanica"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/kvaliteta_zraka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="24dp"
                android:text="@string/kvalitetaZraka"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/rasvjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="24dp"
                android:text="@string/rasvjeta"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>

            <!--Ili rasvijeta ili kamera-->

            <TextView
                android:id="@+id/kamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="24dp"
                android:text="@string/kamera"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="24dp"
                android:text="@string/parking"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/parking_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="24dp"
                android:text="@string/parkingTicket"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>